[package]
name = "network"
version = "0.1.0"
authors = ["jerry-yu <yubo@rivtower.com>"]
edition = "2018"


[dependencies]
libp2p = "0.37.1"
log = "*"
log4rs = { version = "*", features = ["gzip"] }
clap = "3.0.0-beta.2"
git-version = "*"
toml = "*"
serde = "*"
serde_derive = "*"
tonic = "*"
prost = "*"
tokio = { version = "*", features = ["full"] }
cita_cloud_proto = { git = "https://github.com/cita-cloud/cita_cloud_proto",branch = "develop" }
backtrace = "*"

[profile.release.package."*"]
# Set the default for dependencies.
debug = 0

[profile.release]
# Add debug info -- line tables only
debug = 1


